@@ -1,2 +1,2 @@
 import pkg_resources
-pkg_resources.declare_namespace('paste')
+pkg_resources.declare_namespace(__name__)
